--- a/test/start-additional-kas/action.yaml
+++ b/test/start-additional-kas/action.yaml
@@ -21,6 +21,10 @@ inputs:
     default: false
     description:  'Whether or not key_management is enabled for this KAS'
     type: boolean
+  root-key:
+    default: ''
+    description: 'The root key to be used with key_management'
+    type: string
 
 runs:
   using: 'composite'
@@ -35,6 +39,7 @@ runs:
             | (.services.kas.preview.ec_tdf_enabled = ${{ inputs.ec-tdf-enabled }})
             | (.services.kas.preview.key_management = ${{ inputs.key-management }})
             | (.services.kas.registered_kas_uri = "http://localhost:${{ inputs.kas-port }}")
+            | (.services.kas.root_key = ${{ inputs.root-key }})
             | (.sdk_config = {"client_id":"opentdf","client_secret":"secret","core":{"endpoint":"http://localhost:8080","plaintext":true}})
           '
           && .github/scripts/watch.sh opentdf-${{ inputs.kas-name }}.yaml ./opentdf --config-file ./opentdf-${{ inputs.kas-name }}.yaml start
