--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,7 +18,7 @@ updates:
   - package-ecosystem: gomod
     directory: "/examples"
     commit-message:
-      prefix: "fix(deps)"
+      prefix: "chore(ci)"
     groups:
       external:
         exclude-patterns:
@@ -38,7 +38,7 @@ updates:
   - package-ecosystem: gomod
     directory: "/tests-bdd"
     commit-message:
-      prefix: "fix(ci)"
+      prefix: "chore(ci)"
     groups:
       external:
         exclude-patterns:
