--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -409,7 +409,8 @@ jobs:
       packages: read
       pull-requests: write
       checks: write
-    uses: opentdf/tests/.github/workflows/xtest.yml@main
+    # Temporary: point at PR branch to validate xct fix before it merges to opentdf/tests:main.
+    uses: opentdf/tests/.github/workflows/xtest.yml@strantalis/local-start-additional-kas
     with:
       focus-sdk: go
       # use commit instead of ref so we can "go get" specific sdk version
