feat(keycloak): add public client for browser-based SDK authentication
Add opentdf-public client and enable direct access grants to support
browser-based JavaScript SDK quickstart authentication flow.

Signed-off-by: Mary Dickson <mary.dickson@virtru.com>

--- a/service/cmd/keycloak_data.yaml
+++ b/service/cmd/keycloak_data.yaml
@@ -77,8 +77,21 @@ realms:
           name: cli-client
           serviceAccountsEnabled: false
           publicClient: true
+          directAccessGrantsEnabled: true
           redirectUris:
             - 'http://localhost:*'
+          protocolMappers:
+            - *customAudMapper
+      - client:
+          clientID: opentdf-public
+          enabled: true
+          name: opentdf-public
+          serviceAccountsEnabled: false
+          publicClient: true
+          directAccessGrantsEnabled: true
+          redirectUris:
+            - 'http://localhost:*'
+            - 'http://127.0.0.1:*'
           protocolMappers:
             - *customAudMapper
     users:
